unpackaged/main/default/objects/Lead/fields/Teamspace_Invite_Decision__c.field-meta.xml
<CustomField>
    <fullName>Teamspace_Invite_Decision__c</fullName>
    <label>Teamspace Invite Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>