unpackaged/main/default/objects/Lead/fields/Thomas_Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Thomas_Lead_Created_Date__c</fullName>
    <description>The date this lead was created in Thomas Net's system</description>
    <inlineHelpText>The date this lead was created in Thomas Net's system</inlineHelpText>
    <label>Thomas Lead Created Date</label>
    <type>DateTime</type>
</CustomField>