unpackaged/main/default/objects/Lead/fields/Traction_Assignment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Traction_Assignment_Mode__c</fullName>
    <description>Designed to expand Traction Complete capabilities, this picklist will help that system determine where/how to assign leads. This needs to be mapped to a field in HubSpot (with verbatim picklist values). Note: this is using a picklist value set, so the picklist values MUST match exactly.</description>
    <label>Traction Assignment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Traction_Assignment_Mode</valueSetName>
    </valueSet>
</CustomField>