unpackaged/main/default/objects/Lead/fields/Ultimate_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used with Outreach to determine if this Lead was created from Outreach, and who pushed it over.</description>
    <inlineHelpText>Used with Outreach to determine if this Lead was created from Outreach, and who pushed it over.</inlineHelpText>
    <label>Ultimate Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Creator</relationshipName>
    <type>Lookup</type>
</CustomField>