unpackaged/main/default/objects/Lead/fields/Ultimate_Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Created_By_Role__c</fullName>
    <description>Used with a flow to stamp the role of the user who created the lead and determine if a contact/lead was generated by sales or marketing.</description>
    <label>Ultimate Created By Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>