unpackaged/main/default/objects/Lead/fields/Ultimate_Created_By_Text__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Created_By_Text__c</fullName>
    <formula>Ultimate_Created_By__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultimate Created By(Text)</label>
    <type>Text</type>
</CustomField>