unpackaged/main/default/objects/Lead/fields/Unification_LeadType__c.field-meta.xml
<CustomField>
    <fullName>Unification_LeadType__c</fullName>
    <description>Lead Type to differ Marketplace vs Managed Service Lead.</description>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed Service</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>