unpackaged/main/default/objects/Lead/fields/Use_Xometry__c.field-meta.xml
<CustomField>
    <fullName>Use_Xometry__c</fullName>
    <description>HubSpot Property: NPS Share of Wallet</description>
    <inlineHelpText>What percentage of the time do you use Xometry vs. another supplier for custom manufacturing? Answer from SurveyMonkey</inlineHelpText>
    <label>Use Xometry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100%</fullName>
            </value>
            <value>
                <fullName>75% to 100%</fullName>
            </value>
            <value>
                <fullName>50% to 74%</fullName>
            </value>
            <value>
                <fullName>25% to 49%</fullName>
            </value>
            <value>
                <fullName>&lt;25%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>