unpackaged/main/default/objects/Lead/fields/Vertical_Markets__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Markets__c</fullName>
    <label>Vertical Markets</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vertical_Markets</valueSetName>
    </valueSet>
</CustomField>