unpackaged/main/default/objects/Lead/fields/Xom_Original_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Xom_Original_Campaign_Name__c</fullName>
    <label>Xom Original Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>