unpackaged/main/default/objects/Lead/fields/Xom_Original_Page_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Xom_Original_Page_Referrer__c</fullName>
    <label>Xom Original Page Referrer</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>