unpackaged/main/default/objects/Lead/fields/Xom_Original_Source_Drill_Down1__c.field-meta.xml
<CustomField>
    <fullName>Xom_Original_Source_Drill_Down1__c</fullName>
    <description>Custom field for reporting purposes about Thomas to seperate Thomas options from marketplace information</description>
    <inlineHelpText>Identify information about Thomas</inlineHelpText>
    <label>Xom Original Source Drill-Down1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>