unpackaged/main/default/objects/Lead/fields/Xom_Original_Source_Drill_Down2__c.field-meta.xml
<CustomField>
    <fullName>Xom_Original_Source_Drill_Down2__c</fullName>
    <description>Additional reporting and identifying information about Thomas</description>
    <label>Xom Original Source Drill-Down2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>