unpackaged/main/default/objects/Lead/fields/Xometry_ERP_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Xometry_ERP_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>User ID to lookup the User in the ERP</inlineHelpText>
    <label>ERP Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>