unpackaged/main/default/objects/Lead/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <inlineHelpText>Format: #####  --  or  --  #####-####</inlineHelpText>
    <label>Contact Zip Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>