unpackaged/main/default/objects/Lead/validationRules/Disqualification_Requires_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Disqualification_Requires_Reason</fullName>
    <active>true</active>
    <description>Disqualified leads must have a reason</description>
    <errorConditionFormula>AND(
OR(
( $Profile.Name='Marketing User'),
($Profile.Name='Read Only'),
($Profile.Name='Solution Manager'),
($Profile.Name='Standard User'),
($Profile.Name='Xometry Sales User'),
( $Profile.Name='Xometry Service User'),
( $Profile.Name='Xometry Sales Leadership')
),
and(ispickval(Status, 'Closed Not Converted'),ispickval(Lead_Not_Converted_Reason__c,'')))

&amp;&amp; !$Permission.Ignore_All_VR
&amp;&amp; !$Permission.Ignore_Lead_VR</errorConditionFormula>
    <errorMessage>Lead Status: Closed Not Converted must have a Lead Not Converted Reason</errorMessage>
</ValidationRule>