unpackaged/main/default/objects/Lead/validationRules/Fields_Required_for_Lead_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_Required_for_Lead_Conversion</fullName>
    <active>true</active>
    <description>Fields Required for Manual Lead Conversion</description>
    <errorConditionFormula>AND( 
OR( 
( $Profile.Name='Marketing User'), 
($Profile.Name='Read Only'), 
($Profile.Name='Solution Manager'), 
($Profile.Name='Standard User'), 
($Profile.Name='Xometry Sales User'), 
( $Profile.Name='Xometry Service User'), 
( $Profile.Name='Xometry Sales Leadership') 
),
IsConverted  = True,
OR(ISBLANK( FirstName ),
ISBLANK(LastName),
ISBLANK( Email),
ISBLANK( Phone )
)
)

&amp;&amp; !$Permission.Ignore_All_VR
&amp;&amp; !$Permission.Ignore_Lead_VR</errorConditionFormula>
    <errorMessage>Please Make Sure to Fill Out all Information Required for the Lead to be Converted:
First Name, Last Name, Email, and Phone.</errorMessage>
</ValidationRule>