unpackaged/main/default/objects/Lead/validationRules/Qualified_Requires_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Qualified_Requires_Conversion</fullName>
    <active>true</active>
    <description>Qualified leads must be converted</description>
    <errorConditionFormula>AND(ISPICKVAL(Status, "Qualified"), IsConverted=false)

&amp;&amp; !$Permission.Ignore_All_VR
&amp;&amp; !$Permission.Ignore_Opp_VR</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Qualified leads must be converted</errorMessage>
</ValidationRule>