unpackaged/main/default/objects/Lead/validationRules/Sales_Users_Cant_Transfer_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>Sales_Users_Cant_Transfer_Records</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp;
($Profile.Name = 'Xometry Sales User' &amp;&amp;
$User.Id = OwnerId
)

&amp;&amp; !$Permission.Transfer_Ownership

&amp;&amp; !$Permission.Ignore_All_VR
&amp;&amp; !$Permission.Ignore_Lead_VR</errorConditionFormula>
    <errorMessage>Sales Users are not allowed to transfer records. Please see your manager to get a record transferred.</errorMessage>
</ValidationRule>