unpackaged/main/default/objects/Lead/listViews/Drift_Leads_Audit.listView-meta.xml
<ListView>
    <fullName>Drift_Leads_Audit</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CONVERTED</columns>
    <columns>LEAD.STATUS</columns>
    <columns>RR_Flag__c</columns>
    <columns>Generic_BDR_RR_FLAG__c</columns>
    <columns>NonGeneric_BDR_RR_FLAG__c</columns>
    <columns>RR_AssignedDate__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Generic_FLAG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Drift</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed Not Converted</value>
    </filters>
    <label>Drift Leads Audit</label>
    <sharedTo>
        <role>Administrator</role>
        <role>Sales_Administrator</role>
    </sharedTo>
</ListView>