unpackaged/main/default/objects/Lead/listViews/Enterprise.listView-meta.xml
<ListView>
    <fullName>Enterprise</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>MK_Lead_Grade_Segment__c</columns>
    <columns>MK_Customer_Fit_Segment__c</columns>
    <columns>MK_Likelihood_to_Buy_Segment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner_Role__c</field>
        <operation>equals</operation>
        <value>SAE,SAM,CSAM</value>
    </filters>
    <label>Enterprise</label>
</ListView>