unpackaged/main/default/objects/Lead/listViews/IntercomLeadcreatedfromIntercom.listView-meta.xml
<ListView>
    <fullName>IntercomLeadcreatedfromIntercom</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Intercom</value>
    </filters>
    <label>[Intercom] Lead created from Intercom</label>
</ListView>