unpackaged/main/default/objects/Lead/listViews/MarketplaceLeadQueueGeneral_Lead.listView-meta.xml
<ListView>
    <fullName>MarketplaceLeadQueueGeneral_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <label>[Market]Marketplace Lead Queue - General</label>
    <queue>MarketplaceLeadQueueGeneral</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <roleAndSubordinatesInternal>SellerMarketplace</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>