unpackaged/main/default/objects/Lead/listViews/Outreach_Leads.listView-meta.xml
<ListView>
    <fullName>Outreach_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Outreach</value>
    </filters>
    <filters>
        <field>LEAD.CONVERTED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Leads from Outreach</label>
</ListView>