unpackaged/main/default/objects/Lead/listViews/PDS_Leads.listView-meta.xml
<ListView>
    <fullName>PDS_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>MK_Customer_Fit_Segment__c</columns>
    <columns>MK_Lead_Grade_Segment__c</columns>
    <columns>MK_Likelihood_to_Buy_Segment__c</columns>
    <columns>Owner_ID_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HS_Original_source_drill_down_1__c</field>
        <operation>contains</operation>
        <value>pds_</value>
    </filters>
    <label>PDS Leads</label>
</ListView>