unpackaged/main/default/objects/Lead/listViews/Quarantined_Email_Domains.listView-meta.xml
<ListView>
    <fullName>Quarantined_Email_Domains</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>Quarantined Email Domains</value>
    </filters>
    <label>Quarantined Email Domains</label>
    <sharedTo>
        <role>Administrator</role>
    </sharedTo>
</ListView>