unpackaged/main/default/objects/Lead/listViews/Quarantined_Email_Domains_Lead.listView-meta.xml
<ListView>
    <fullName>Quarantined_Email_Domains_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Quarantined Email Domains</label>
    <queue>Quarantined_Email_Domains</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>